<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="#333333">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ViewFlipper
            android:id="@+id/banner_flipper"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:flipInterval="1000"
            android:gravity="center">

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </ViewFlipper>
    </FrameLayout>

    <com.example.hairstylechanger.imageedit.View.CustomViewPager
        android:id="@+id/bottom_gallery"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_banner_height"
        android:layout_alignParentBottom="true"
        android:background="@color/main_backgroud"
        android:overScrollMode="never" />

    <FrameLayout
        android:id="@+id/work_space"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_gallery"
        android:layout_below="@id/banner"
        android:background="#000000">

        <com.example.hairstylechanger.imageedit.View.Imagezoom.ImageViewTouch
            android:id="@+id/main_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center" />

        <com.example.hairstylechanger.imageedit.View.StickerView
            android:id="@+id/sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/redo_uodo_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_gallery"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="10dp">
        <ImageView
            android:id="@+id/uodo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/uodo" />
        <ImageView
            android:id="@+id/redo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/redo" />
    </LinearLayout>

</RelativeLayout>